allprojects  {
  group = 'net.chrisrichardson.futures-and-observables'
  version = '1.0-SNAPSHOT'

}

subprojects {
  apply plugin: 'scala' // HAD to CHANGE
  sourceCompatibility = 1.6
  targetCompatibility = 1.6
  test {
    maxHeapSize = '1024m'
    jvmArgs = ["-XX:MaxPermSize=512m"]
  }

    repositories {
        mavenCentral()
        // maven { url "http://repo.spray.io/" }
        maven { url "http://repo.springsource.org/release" }
        maven { url "http://repo.springsource.org/milestone" }
        maven { url "http://repo.springsource.org/snapshot" }
    }

  
  
  
}
